# nannou_webp_animation

./: Cargo.toml  LICENSE  README.md  build.rs  wrapper.h
.github/workflows/: rust.yml
examples/: basic_example.rs
src/: animation.rs  decoder.rs  frame.rs  lib.rs  utils.rs
